@@ -9,8 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.amigoscode</groupId>
-	<artifactId>spring-boot-example</artifactId>
+	<artifactId>amigoscode-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<organization>
+		<name>amigoscode</name>
+		<url>https://amigoscode.com</url>
+	</organization>
 	<name>spring-boot-example</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -27,7 +31,8 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>23</java.version>
+		<java.version>21</java.version>
+		<docker.username>faycaldr</docker.username>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -129,28 +134,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<argLine>
-						-javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
-					</argLine>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<!--Le plugin maven-surefire-plugin est responsable d'exécuter les tests pendant mvn test. Donc tous les class java qui finissent
 				avec le mot "Test" si non il va pas la prendre en concideration meme si une class de test-->
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
 				<configuration>
 					<excludes>
 						<!--Avec cette config, tu dis à Maven : ➔ « Ignore tous les fichiers de test qui finissent par IntegrationTest.
@@ -188,7 +182,36 @@
 					</includes>
 				</configuration>
 			</plugin>
-        </plugins>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.5</version>
+				<configuration>
+					<from>
+						<image>eclipse-temurin:21-jre-alpine</image>
+						<platforms>
+							<platform>
+								<architecture>amd64</architecture>
+								<os>linux</os>
+							</platform>
+							<platform>
+								<architecture>arm64</architecture>
+								<os>linux</os>
+							</platform>
+						</platforms>
+					</from>
+						<to>
+							<image>docker.io/${docker.username}/${project.artifactId}</image>
+							<tags>
+								<name>latest</name>
+							</tags>
+						</to>
+					<container>
+						<mainClass>com.amigoscode.Main</mainClass>
+					</container>
+				</configuration>
+			</plugin>
+ 	</plugins>
 	</build>
 
 </project>
